--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="./css/main.css" />
+  </head>
+  <body>
+    <div class="space"></div>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+    <div class="main-div">
+      <div class="phones-div">
+        <img class="phones-img" src="./images/phones.png" alt="phones" />
+      </div>
+      <div class="info-div">
+        <div class="brand">
+          <img src="./images/brand.png" alt="brand" />
+        </div>
+        <h3>Capture and Share the World's Moments</h3>
+        <div>
+          <p class="paragraph">
+            Instagram is a <span class="bold">fast</span>,
+            <span class="bold">beautiful</span> and
+            <span class="bold">fun</span> way to share your life with friends
+            and family.
+          </p>
+          <p class="paragraph">
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the world.
+          </p>
+          <p class="paragraph">
+            Oh yeah, did we mention it's free?
+          </p>
+        </div>
+        <div class="badge-img badge-iphone">
+          <img src="./images/badge-iphone.png" alt="badge-iphone" />
+        </div>
+        <div class="badge-img badge-android">
+          <img src="./images/badge-android.png" alt="badge-android" />
+        </div>
+      </div>
+    </div>
+    <footer>
+      <a href="#aboutUs" target="_blank" class="link">ABOUT US</a>
+      <a href="#support" target="_blank" class="link">SUPPORT</a>
+      <a href="#blog" target="_blank" class="link">BLOG</a>
+      <a href="#press" target="_blank" class="link">PRESS</a>
+      <a href="#api" target="_blank" class="link">API</a>
+      <a href="#jobs" target="_blank" class="link">JOBS</a>
+      <a href="#privacy" target="_blank" class="link">PRIVACY</a>
+      <a href="#terms" target="_blank" class="link">TERMS</a>
+      <span class="trademark"> © 2014 Instagram</span>
+    </footer>
+  </body>
 </html>
