--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
+  <meta charset="utf-8">
   <title>Instagram</title>
   <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
   <div class="main-div">
@@ -16,25 +18,23 @@
       <div class="content">
         <div class="content-header">
           <span> <img src="./images/brand.png" alt="Instagram logo"> </span>
-          <button>Log in</button>
+          <button>
+            <i class="fa fa-home"></i>
+            Log in
+          </button>
         </div>
         <div class="content-body">
           <h2>
-          Capture and Share <br> the World's Moments
+            Capture and Share <br> the World's Moments
           </h2>
-
           <p>
-          Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
+            Instagram is a fast, beautiful and fun way to share your life with friends and family.
           </p>
-
           <p>
-          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
           </p>
-
           <p>
-          Oh yeah, did we mention it's free?
+            Oh yeah, did we mention it's free?
           </p>
         </div>
         <div class="content-bottom">
