El flex es traicionero. No supe como hacer que la imagen de fondo tuviese una altura distinta a 100%.

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <meta charset="UTF-8" />
+    <title>Instagram</title>
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body class="flex vertical-flex">
+    <section>
+      <div class="cell-img-cont">
+        <img src="images/phones.png" alt="" class="cell-img" />
+      </div>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+      <div id="txt-btn-cont" class="vertical-flex flex">
+        <div class="btns-cont horizontal-flex flex">
+          <div class="btn-cont">
+            <img src="images/brand.png" alt="" class="btn" />
+          </div>
+          <div class="btn-cont flex horizontal-flex">
+            <p>Log in</p>
+            <img src="images/home.png" alt="" class="btn" />
+          </div>
+        </div>
+        <div id="txt-cont">
+          <h2>Instagram Capture and Share the World's Moments</h2>
+          <p>
+            Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share
+            your life with friends and family. Take a picture or video, choose a
+            filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter,
+            Tumblr and more. It's a new way to see the world. Oh yeah, did we
+            mention it's free?
+          </p>
+        </div>
+        <div class="btns-cont">
+          <div class="btn-cont">
+            <img src="images/badge-iphone.png" alt="" class="btn" />
+          </div>
+          <div class="btn-cont">
+            <img src="images/badge-android.png" alt="" class="btn" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <a href="https:\\www.google.com" class="blu-lnk">About Us</a>
+      <a href="https:\\www.google.com" class="blu-lnk">Support</a>
+      <a href="https:\\www.google.com" class="blu-lnk">Blog</a>
+      <a href="https:\\www.google.com" class="blu-lnk">Press</a>
+      <a href="https:\\www.google.com" class="blu-lnk">API</a>
+      <a href="https:\\www.google.com" class="blu-lnk">Jobs</a>
+      <a href="https:\\www.google.com" class="blu-lnk">Privacy</a>
+      <a href="https:\\www.google.com" class="blu-lnk">Terms</a>
+      <p class="gry-txt">&copy; 2014 Instagram</p>
+    </footer>
+  </body>
 </html>
