--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Instagram</title>
+  <link rel="stylesheet" href="../starter-code/css/main.css">
 </head>
+ 
 <body>
-  Instagram
+  <section class="seccion1">
+    <img src="../starter-code/images/phones.png" alt="Imagen celulares">
+    <img src="../starter-code/images/brand.png" alt="Imagen logotipo">
+    <button><img src="../starter-code/images/home.png" alt="Inicio">HOME</button>
 
-  Capture and Share the World's Moments
+  </section>
+  
+  <section class="seccion2">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  
+    <h1>Instagram</h1>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <h2>Capture and Share the World's Moments </h2>
 
-  Oh yeah, did we mention it's free?
+    <article> Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    Oh yeah, did we mention it's free?
+    </article>
 
-  Download on the App Store
-  Get it on Google Play
+    <h3>Download on the App Store</h3> 
+    <h3>Get it on Google Play</h3>
+    
+  </section>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer>
+   <ul>
+     <il>About Us</il>
+     <il>Support</il>
+     <il>Blog</il>
+     <il>Press</il>
+     <il>API</il>
+     <il>Jobs</il>
+     <il>Privacy</il>
+     <il>Terms</il>
+     <il>&copy; 2014 Instagram</il>
+   </ul>
+  
+</footer>
 </body>
 </html>
