--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -9,43 +9,47 @@
 </head>
  
 <body>
-  <section class="seccion1">
-    <img src="../starter-code/images/phones.png" alt="Imagen celulares">
-    <img src="../starter-code/images/brand.png" alt="Imagen logotipo">
-    <button><img src="../starter-code/images/home.png" alt="Inicio">HOME</button>
-
+  <section class="seccion1">    
+      <img src="../starter-code/images/phones.png" alt="Imagen celulares" class="imgefecto">
+      <img src="../starter-code/images/brand.png" alt="Imagen logotipo">
+      <button class="boton"><img src="../starter-code/images/home.png" alt="Inicio">HOME</button>    
   </section>
   
   <section class="seccion2">
-
-  
-    <h1>Instagram</h1>
-
-    <h2>Capture and Share the World's Moments </h2>
-
-    <article> Instagram is a fast, beautiful and fun way to share your life with friends and family.
-    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="division2">  
+    <h2>Capture and Share <br> the World's Moments </h2>
+    <article> Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family. <br> <br>
+    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br> <br>
     Oh yeah, did we mention it's free?
     </article>
-
-    <h3>Download on the App Store</h3> 
-    <h3>Get it on Google Play</h3>
-    
+    <div class="botones">
+     <img src="../starter-code/images/badge-iphone.png" alt="Download on the App Store" class="descarga">
+     <img src="../starter-code/images/badge-android.png" alt="Get it on Google Play" class="descarga">
+  </div>
+  </div>
   </section>
 
-  <footer>
-   <ul>
-     <il>About Us</il>
-     <il>Support</il>
-     <il>Blog</il>
-     <il>Press</il>
-     <il>API</il>
-     <il>Jobs</il>
-     <il>Privacy</il>
-     <il>Terms</il>
-     <il>&copy; 2014 Instagram</il>
-   </ul>
+  <footer class="seccion3">
+   <ol>
+     <li>About Us</li>
+     <li>Support</li>
+     <li>Blog</li>
+     <li>Press</li>
+     <li>API</li>
+     <li>Jobs</li>
+     <li>Privacy</li>
+     <li>Terms</li>
+     <li>&copy; 2014 Instagram</li>
+   </ol>
   
 </footer>
+
+<main class="mario">
+    <input type="checkbox" class="auto" id="auto" checked>
+    <label class="auto-rotate" for="auto">Auto &#x21bb;</label><br>
+    <span class="anticlockwise">&#x2190;</span>
+    <span class="clockwise">&#x2192;</span>
+    <div class="rotate"></div>
+</main>
 </body>
 </html>
