--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,55 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+    <div class="background container-first">
+      <img class="phone" src="./images/phones.png" alt="phones">
+      <div class="container-second">
+        <div>
+          <img src="./images/brand.png" alt="brand">
+          <button><img src="./images/home.png" alt="home"> Log in</button>
+        </div>
+        <div class="frame">
+            <h1>Capture and Share the World's Moments
+            </h1>
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
+              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            
+              Oh yeah, did we mention it's free?</p>
+        </div>
+        <div>
+          <img src="./images/badge-android.png" alt="androidbutton">
+          <img src="./images/badge-iphone.png"  alt="iphonebutton">
+        </div>
+      </div>
+    </div>
+    <footer>
+      <a href="">About Us</a>
+      <a href="">Support</a>
+      <a href="">Blog</a>
+      <a href="">Press</a>
+      <a href="">API</a>
+      <a href="">Jobs</a>
+      <a href="">Privacy</a>
+      <a href="">Terms</a>
+      <span>&copy; 2014 Instagram</span>
+    </footer>
+  <!-- Instagram
   Download on the App Store
   Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  
+  
+  
+  
+  
+  
+  
+  
 
-  &copy; 2014 Instagram
+   -->
 </body>
 </html>
