--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="./css/main.css" />
+  </head>
+  <body>
+    <!-- Main -->
+    <main>
+      <!-- Left -->
+      <div class="phones">
+        <img src="./images/phones.png" alt="iPhone 1 (lol) and Android" />
+      </div>
+      <!-- Right -->
+      <section>
+        <!-- Header -->
+        <header>
+          <!-- Brand -->
+          <img src="./images/brand.png" alt="Instagram 2009" />
+          <!-- Button -->
+          <a href="#" class="button">
+            <img src="./images/home.png" alt="Home icon" />
+            <span>Log in</span>
+          </a>
+        </header>
+        <!-- Box Info -->
+        <article>
+          <div class="whiteCanvas">
+            <h1>
+              Capture and Share <br />
+              the World's Moments
+            </h1>
+            <p>
+              Instagram is a <strong>fast</strong>,
+              <strong>beautiful</strong> and <strong>fun</strong> way to share
+              your life with friends and family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and
+              feel, then post to Instagram &mdash; it's that easy. You can even
+              share to Facebook, Twitter, Tumblr and more. It's a new way to see
+              the world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <div class="stores">
+              <img
+                src="./images/badge-iphone.png"
+                alt="Download on the app store"
+              />
+              <img
+                src="./images/badge-android.png"
+                alt="Get it on Google Play"
+              />
+            </div>
+          </div>
+        </article>
+      </section>
+    </main>
+    <!-- Footer -->
+    <footer>
+      <ul>
+        <li>
+          <a href="#">About Us</a>
+        </li>
+        <li>
+          <a href="#">Support</a>
+        </li>
+        <li>
+          <a href="#">Blog</a>
+        </li>
+        <li>
+          <a href="#">Press</a>
+        </li>
+        <li>
+          <a href="#">API</a>
+        </li>
+        <li>
+          <a href="#">Jobs</a>
+        </li>
+        <li>
+          <a href="#">Privacy</a>
+        </li>
+        <li>
+          <a href="#">Terms</a>
+        </li>
+        <li>
+          <span>&copy; 2014 Instagram</span>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
