--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
+
 </head>
+
 <body>
-  Instagram
+  <header>
+    <div id="titulo">
+      <img src="./images/brand.png" alt="instagram" />
+      <div id="login"><img src="./images/home.png" alt="casa" /> Log in</div>
+    </div>
+  </header>
+  <div id="phones">
+    <img src="./images/phones.png" alt="telefonos">
+  </div>
+  <section>
+    <p id="caja">
 
-  Capture and Share the World's Moments
+    <h2>Capture and Share the World's Moments</h2>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+     Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that
+      easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+      Oh yeah, did we mention it's free?
+    </p>
+    <div>
+      <img src="./images/badge-iphone.png" alt="on the App Store">
+      <img src="./images/badge-android.png" alt="Get it on Google Play">
+    </div>
+    
+  </section>
+  <footer>
+    About Us
+    Support
+    Blog
+    Press
+    API
+    Jobs
+    Privacy
+    Terms
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    &copy; 2014 Instagram 
+  </footer>
 </body>
+
 </html>
