--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,50 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css" class="css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div id="most-great-container">
+    <div id="great-container">
+      <section id="phone">
+        <img src="./images/phones.png" alt="" />
+      </section>
+      <section id="main-content">
+        <article id="marca-main">
+            <img src="./images/brand.png" alt="">
+            <div id="button">
+              <img src="./images/home.png" alt="" class="inline-img">
+              <p>Log in</p>
+            </div>
+        </article>
+        <article id="cuadro">
+          <div class="cuadro-content">
+            <h2>Capture and Share the World's Moments</h2> 
+          
+            <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</br>
+            </br>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</br>
+          </br>
+          Oh yeah, did we mention it's free?<br></p>
+          <img src="./images/badge-iphone.png" alt="">
+          <img src="./images/badge-android.png" alt="">
+          </div>
+        </article>
+      </section>
+    </div>
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li class="grey">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+  </div>
 </body>
 </html>
