--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,45 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
   Instagram
+<div class="blue-rectangle">
+    <img src="./images/brand.png" class="logo">
+    <div class="login">
+      <img src="./images/home.png">
+      <p>Login</p>
+    </div>
+    
+</div>
+<div class="phones"><img src="./images/phones.png"></div>
+<div class="content">
+  <h2>Capture and Share<br> the World's Moments</h2>
 
-  Capture and Share the World's Moments
+  <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p>Oh yeah, did we mention it's free?</p>
 
-  Oh yeah, did we mention it's free?
+  <img class="iphone" src="./images/badge-iphone.png" >
+  <img class="android" src="./images/badge-android.png">
+</div>
 
-  Download on the App Store
-  Get it on Google Play
+<footer>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+<a href="#">About Us</a>
+<a href="#">Support</a>
+<a href="#">Blog</a>
+<a href="#">Press</a>
+<a href="#">API</a>
+<a href="#">Jobs</a>
+<a href="#">Privacy</a>
+<a href="#">Terms</a>
 
   &copy; 2014 Instagram
+</footer>
+  
 </body>
 </html>
