--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,51 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css" />
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
-</html>
+    <main>
+      <div class="contenidoprincipal">
+        <img class="imagentelefonos" src="images/phones.png" alt="telefonosinstagram">
+        <div class="texto">
+          <div class="titulo">
+            <img src="images/brand.png">
+            <div class="boton">
+              <img src="images/home.png">
+              <p><b>Log In</b></p>
+            </div>
+          </div>
+          <div class="marcodeltexto">
+            <h1>Capture and Share<br>the World's Moments</h1>
+            <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life<br>with friends and
+              family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+              it's
+              that
+              easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <div class="appStores">
+              <img src="images/badge-iphone.png" alt="AppStoreLogo">
+              <img src="images/badge-android.png" alt="PlayStoreLogo"></div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer>
+    <ul class="footer"> 
+        <li class="elementolista" href="">About Us</li>         
+        <li class="elementolista" href="">Support</li>         
+        <li class="elementolista" href="">Blog</li>         
+        <li class="elementolista" href="">Press</li>         
+        <li class="elementolista" href="">API</li>         
+        <li class="elementolista" href="">Jobs</li>         
+        <li class="elementolista" href="">Privacy</li>         
+        <li class="elementolista" href="">Terms</li>        
+        <li class="elementolistaExtra"> <span>&copy; 2014 Instagram</span></li> 
+        </ul> 
+      </footer>    
+  </body>
+  </html>
+  
+  </html> 
