--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,48 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="../starter-code/css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div id="div-principal">
+    <article id="article1">
+      <img src="../starter-code/images/phones.png" alt="iphone">
+    </article>
+     <article id="article2">
+      <div id="article2-login">
+        <img src="../starter-code/images/brand.png" alt="inta-logo">
+        <div>
+          <button id="button1"><img src="../starter-code/images/home.png" alt="home"> Log in</button>
+        </div>
+      </div>
+      <div id="article2-div-text">
+        <header>
+          Capture and Share <br> the World's Moments
+        </header>
+        <div>
+            Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life <br>with friends and family.<br><br>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
+            Oh yeah, did we mention it's free?<br><br>
+        </div>
+        <div>
+          <button class="button2"><img src="../starter-code/images/badge-iphone.png" alt=""></button>
+          <button class="button2"><img src="../starter-code/images/badge-android.png" alt=""></button>
+        </div>
+      </div>
+    </article>
+  </div>
+<footer>
+    <ul>
+      <li>About us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API<li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li id="footer-copyright">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
 </html>
