--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,20 +2,45 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
+  <div id="main">
+    <div id="content">
+      <div id="phones">
+      </div>
+      <div id="text">
+        <div id="header">
+          <img src="./images/brand.png" alt="instagram logo">
+          <button><span><img src="./images/home.png" alt="home"></span> Log in</button>
+        </div>
+        <div id="description">
+          <h1>
+            Capture and Share<br/>the World's Moments
+          </h1>
+          <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <img src="./images/badge-iphone.png" alt="">
+          <img src="./images/badge-android.png" alt="">
+        </div>
+      </div>
+    </div>
+    <div id="footer">
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+        </ul>
+        <p>&copy; 2014 Instagram</p>
+    </div>
+  </div>
+  <!-- 
 
   About Us
   Support
@@ -26,6 +51,5 @@
   Privacy
   Terms
 
-  &copy; 2014 Instagram
 </body>
 </html>
