--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,52 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet">
 </head>
 <body>
-  Instagram
+<div class="container">
+  <div id="left-frame"></div>
+  <div id="phone-image">
+      <img src="./images/phones.png" alt="Phones">
+  </div>
 
-  Capture and Share the World's Moments
+  <div id="right-content">
+    <div id="logo">
+        <img id="insta-logo" src="./images/brand.png" alt="Instagram">
+        <button type="button">
+          
+            <img id="login" src="./images/home.png" alt="Login">
+            <a>Log in<br /></a>
+          
+          </button>
+    </div>
+    <div id="description">
+        <h2>Capture and Share <br />the World's Moments</h2>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+    </div> 
+    <div id="stores">
+        <img src="./images/badge-iphone.png" alt="Instagram">
+        <img src="./images/badge-android.png" alt="Phones">
+    </div>
+  </div>
+  <div id="right-frame"></div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div id="footer">
+      <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li id="copyright">&copy; 2014 Instagram</li>
+        </ul>
+  </div>
+</div>
 </body>
 </html>
