--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,53 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="back">
+  </div>
+  <header class="header">
+    <div class="logo">
+      <img src="./images/brand.png" alt="Instagram logo">
+    </div>
+    <button class="log-in">
+      <img src="./images/home.png" alt="Home">
+      Log in
+    </button>  
+  </header>
+  <section class="feature-image">
+    <img src="./images/phones.png" alt="phone">
+  </section>
+  <div class="info-bg">
+  </div>
+  <section class="info">
+    <h2 class="heading--secondary">
+      Capture and Share the World's Moments
+    </h2>
+    <p>
+      Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <br>
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <br>
+      Oh yeah, did we mention it's free?
+    </p>
+    <div class="download">
+      <img src="./images/badge-iphone.png" alt="iPhone link">
+      <img src="./images/badge-android.png" alt="Android link">
+    </div>
+  </section>
+  <footer class="footer">
+    <ul class="links">
+      <li><a href="">About Us</a></li>
+      <li><a href="">Support</a></li>
+      <li><a href="">Blog</a></li>
+      <li><a href="">Press</a></li>
+      <li><a href="">API</a></li>
+      <li><a href="">Jobs</a></li>
+      <li><a href="">Privacy</a></li>
+      <li><a href="">Terms</a></li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
 </html>
