--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="../css/main.css">
 </head>
+
 <body>
-  Instagram
+  <header class="header">
+    <div>
+        <img class="simbol" src="../images/brand.png" alt="Instagram">
+        <button><img src="../images/home.png" alt="Log In">Log In</button>
+    </div>    
+  </header>
 
-  Capture and Share the World's Moments
+  <section class="contenedor body">
+    <div class="phone">
+      <img src="../images/phones.png" alt="">
+    </div>
+    <div class="card">
+      <h1>Capture and Share the World's Moments</h1>
+      <p> 
+      Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that
+      easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      Oh yeah, did we mention it's free?
+      </p>
+      <buton>
+        <img src="../images/badge-iphone.png" alt="Download for iPhone">
+      </buton>
+      <buton>
+        <img src="../images/badge-android.png" alt="Download for Android">
+      </buton>
+    </div>
+  </section>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer class="footer">
+    <span>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+    </ul>
+    <p>&copy; 2014 Instagram</p>
+  </span>
+  </footer>
 </body>
+
 </html>
