--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -3,20 +3,20 @@
 
 <head>
   <title>Instagram</title>
-  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
   <header class="header">
     <div>
-        <img class="simbol" src="../images/brand.png" alt="Instagram">
-        <button><img src="../images/home.png" alt="Log In">Log In</button>
+        <img class="simbol" src="./images/brand.png" alt="Instagram">
+        <button><img src="./images/home.png" alt="Log In">Log In</button>
     </div>    
   </header>
 
   <section class="contenedor body">
     <div class="phone">
-      <img src="../images/phones.png" alt="">
+      <img src="./images/phones.png" alt="">
     </div>
     <div class="card">
       <h1>Capture and Share the World's Moments</h1>
@@ -29,16 +29,16 @@
       Oh yeah, did we mention it's free?
       </p>
       <buton>
-        <img src="../images/badge-iphone.png" alt="Download for iPhone">
+        <img src="./images/badge-iphone.png" alt="Download for iPhone">
       </buton>
       <buton>
-        <img src="../images/badge-android.png" alt="Download for Android">
+        <img src="./images/badge-android.png" alt="Download for Android">
       </buton>
     </div>
   </section>
 
-  <footer class="footer">
-    <span>
+  <footer class="footer" style="display: flex; justify-content: center; align-items: center;">
+
     <ul>
       <li>About Us</li>
       <li>Support</li>
@@ -49,8 +49,8 @@
       <li>Privacy</li>
       <li>Terms</li>
     </ul>
-    <p>&copy; 2014 Instagram</p>
-  </span>
+    <p style="padding-left: 20px;">&copy; 2014 Instagram</p>
+  
   </footer>
 </body>
 
