--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css" />
 </head>
 <body>
-  Instagram
+  <div class="bg">
+    <div class="telefono">
+      <img src="./images/phones.png"/>
+    </div>
+  <div class="side">
+      <img src="./images/brand.png">
 
-  Capture and Share the World's Moments
+      <a href="#" class="button"></a>
+      <img src="./images/home.png" alt="">
+  
+   <div class="fondoblanco">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <h1 class="text1">Capture and Share<br> the World's Moments</h1>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Download on the App Store
-  Get it on Google Play
+  <p>Oh yeah, did we mention it's free?</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+  </div>
+
+  <div>
+    <img src="./images/badge-iphone.png" alt="">
+    <img src="./images/badge-android.png" alt="">
+  </div>
+<footer class="footer">
+  <ul>
+      <li> <a href="#">About Us<a></a></li>
+      <li> <a href="#">Support</a></li>
+      <li> <a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+     </ul>
+     
+     &copy; 2014 Instagram
+
+    </footer>
+  
+  
+  </div>
 </body>
 </html>
