--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,50 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="area">
+    <div class="blue-bckgd"></div>
+    <div class="content-box">
+          <div class="content-box-left"> <img src="./images/phones.png" alt=""></div>
+              <div class="content-box-right">
+              <div class="content-box-right-top">
+                  <img src="./images/brand.png" alt="">
+                  <button> <img src="./images/home.png" alt=""> Log in</button>
+              </div>
+              <div class ="content-on-bckgd">
+              <div class="content-box-right-center">
+                  <h1>Capture and Share the World's Moments</h1>
+            
+                  <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life <br> with friends and family. <br> 
+                  <br>  
+                
+                  Take a picture or video, choose a filter to transform its look <br> and feel, then post to Instagram &mdash; it's that easy. You can <br> even share to Facebook, Twitter, Tumblr and more. It's a <br> new way to see the world. <br>
+                  <br>
+                  Oh yeah, did we mention it's free?</p>
+              </div>
+                  <div class="content-box-right-bottom">
+                    <img src="./images/badge-android.png" alt="Android">
+                    <img src="./images/badge-iphone.png" alt="ios">
+                  </div>
+                </div>
+              </div>
+                </div>
+      <nav>
+        <ul>
+          <li> About Us</li>
+          <li> Support</li>
+          <li> Blog</li>
+          <li> Press</li>
+          <li> API</li>
+          <li> Jobs</li>
+          <li> Privacy</li>
+          <li> Terms</li>
+          <li class ="copyright"> &copy; 2014 Instagram</li>
+        </ul>
+      </nav>
+  
+  </div>
 </body>
 </html>
