missing white background in info

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,83 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+<a href="https://camo.githubusercontent.com/571753eb7b390f82af59cd1367e603be5a757913/68747470733a2f2f692e696d6775722e636f6d2f445139666b31752e706e67">
+<div class=container>
+ <section id="instagram-photo">
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<img src="images/phones.png" alt="instagram-mobile">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+ </section>
+
+ <section id="instagram-info">
+
+  <div class="top-elements">
+
+ <div class="logo">
+   <img src="images/brand.png" id="logo-pic"/>
+</div>  
+
+<div class="login">
+    <img src="images/home.png" id="login-pic"/>
+ <span class="login-font-color"> Log In  </span>
+ </div>  
+ 
+</div>
+
+
+
+   <div class="about-title">
+   <h1>Capture and Share the World's Moments</h1>
+   </div>
+
+
+   <div class="about-info">
+  <p> 
+  Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
   Oh yeah, did we mention it's free?
+  </p>
+ 
+<div class="download-app">
 
-  Download on the App Store
-  Get it on Google Play
+<div class="store-apple">
+  <img src="images/badge-iphone.png" id="apple-badge">
+</div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+<div class="store-google">
+    <img src="images/badge-android.png" id="apple-android">
+</div>
 
-  &copy; 2014 Instagram
+</div>
+
+
+
+
+</section>
+
+
+</div>
+</a>
+
+<section id="more-resources-links">
+  <div class="contact-link">About Us</div> 
+  <div class="contact-link">Support</div>  
+  <div class="contact-link">Blog</div>  
+  <div class="contact-link"> Press</div> 
+  <div class="contact-link">API</div>  
+  <div class="contact-link">Jobs</div>  
+  <div class="contact-link"> Privacy</div> 
+  <div class="contact-link"> Terms  </div> 
+  
+  <div class="contact-link"> <span class="gray"></span> &copy; 2014 Instagram </span></div> 
+
+</section>
+
 </body>
 </html>
