--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css" />
 </head>
+
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="space">
+    <div class="bg-blue"></div>
+    <div class="content">
+      <div class="row-info">
+        <div class="big-image"></div>
+        <div class="info">
+          <div class="info-imgs">
+            <div class="instagram"></div>
+            <button>Log in</button>
+          </div>
+          <div class="white-box">
+            <h1>Capture and Share the World's Moments</h1>
+            <p>
+              Instagram is a <strong>fast</strong>,
+              <strong>beautiful</strong> and <strong>fun</strong> way to share
+              your life with friends and family. Take a picture or video,
+              choose a filter to transform its look and feel, then post to
+              Instagram &mdash; it's that easy. You can even share to
+              Facebook, Twitter, Tumblr and more. It's a new way to see the
+              world. <br>
+              Oh yeah, did we mention it's free?
+            </p>
+            <div class="buttons">
+              <img src="./images/badge-android.png" alt="Android" />
+              <img src="./images/badge-iphone.png" alt="iOS" />
+            </div>
+          </div>
+        </div>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="https://www.instagram.com/about/us/"> About Us</a></li>
+          <li><a href="https://help.instagram.com/"> Support</a></li>
+          <li>
+            <a href="https://www.instagram.com/directory/hashtags/"> Blog</a>
+          </li>
+          <li><a href="https://instagram-press.com/"> Press</a></li>
+          <li><a href="https://www.instagram.com/developer/"> API</a></li>
+          <li><a href="https://www.instagram.com/about/jobs/"> Jobs</a></li>
+          <li>
+            <a href="https://www.instagram.com/legal/privacy/"> Privacy</a>
+          </li>
+          <li><a href="https://www.instagram.com/legal/terms/"> Terms</a></li>
+          <li>&copy; 2014 Instagram</li>
+        </ul>
+      </nav>
+    </div>
+  </div>
 </body>
+
 </html>
