--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,74 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css" />
 </head>
 <body>
-  Instagram
+  <main>
+  <section class="phones">
+    <img src="../starter-code/images/phones.png" alt = 'iphone and android'/>
+  </section>
 
-  Capture and Share the World's Moments
+  <header>
+     <img src="../starter-code/images/brand.png" alt = 'brand logo'/>
+     <a href="#" class="button">
+        <img src="./images/home.png" alt="Home icon" />
+        <span>Log in</span>
+      </a>
+  </header>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<div class="up">
+  <section class = 'rightSide'>
+    <h1> Capture and Share <br/> the World's Moments </h1>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Download on the App Store
-  Get it on Google Play
+    <p>Oh yeah, did we mention it's free?</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    <img src="../starter-code/images/badge-iphone.png" alt = 'App Store'/>
+    <img src="../starter-code/images/badge-android.png" alt = 'Play Store'/>
 
-  &copy; 2014 Instagram
+
+
+  </section>
+
+  </div>
+
+  <section class='footer'>
+  <footer>
+    <ul>
+      <li>
+        <a href="#">About us</a>
+      </li>
+      <li>
+        <a href="#">Support</a>
+      </li>
+      <li>
+          <a href="#">Blog</a>
+      </li>
+      <li>
+          <a href="#">Press</a>
+      </li>
+      <li>
+          <a href="#">API</a>
+      </li>
+      <li>
+          <a href="#">Jobs</a>
+      </li>
+      <li>
+          <a href="#">Privacy</a>
+      </li>
+      <li>  
+        <a href="#">Terms</a>
+      </li>
+      <li>
+        <a href="#">&copy; 2014 Instagram</a>
+      </li>
+    </ul>
+  </main>
+  </footer>
+  </section>
 </body>
 </html>
