--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+ <title>Instagram</title>
+ <meta charset="utf-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <meta http-equiv="X-UA-Compatible" content="ie=edge">
+ <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+ 
+ <div class="azul">
+   <center></center><div class="cont">
+     <div class="c1">
+         <img class="celulares" src="images/phones.png" alt="">
+     </div>
+     <div class="c2">
+       <div class="c2-1">
+         <img class="brand" src="images/brand.png" alt="">
+         <a class="boton" href=""><img src="images/home.png" alt=""> Log in</a>
+       </div>
+ 
+ 
+       <div class="c2-2">
+           <img src="images/frame.png" alt="" style="width:100%;">
+           <div class="centered">
+               <h1>Capture and Share the World's Moments</h1>
+               <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+               <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+               <p>Oh yeah, did we mention it's free?</p>
+            <a href=""><img src="images/badge-iphone.png" alt=""></a>
+            <a href=""><img src="images/badge-android.png" alt=""></a>
+           </div>
+       </div>
+     </div>
+   </div>
+ </center>
+ </div>
+<div class="footer">
+ <p><a href="">ABOUT US</a>
+   <a href="">SUPPORT</a>
+   <a href="">BLOG</a>
+   <a href="">PRESS</a>
+   <a href="">API</a>
+   <a href="">JOBS</a>
+   <a href="">PRIVACY</a>
+   <a href="">TERMS</a>
+   &copy; 2014 INSTAGRAM</p>
+</div>
 </body>
 </html>
