--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,49 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-  Instagram
+  <div id= "top">
+    <img src="./images/phones.png" alt="phones">
+    <header>
+      <img src="./images/brand.png" alt="instagram brand">
 
-  Capture and Share the World's Moments
+    </header>
+    <div>
+        <button type="login">Log in<img src="images/home.png" alt="home"></button>
+    </div>
+  </div>
+  <div id = "btm">
+    <section>
+      <img id ='frame' src="images/frame.png" alt="frame">
+      <div id = 'capture'>
+        <h2>Capture and Share the World's Moments</h2>
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <button>
+          <a href="#"><img src="images/badge-android.png" alt="Get it on Google Play"></a>    
+        </button>
+        <button>
+          <a href="#"><img src="images/badge-iphone.png" alt="Download on the App Store"></a>  
+        </button> 
+      </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    </section>
+  </div>
+  <div id = "footer">
+    <footer>
+      <a href="#">About Us</a></li>
+      <a href="#">Support</a></li>
+      <a href="#">Blog</a></li>
+      <a href="#">Press</a></li>
+      <a href="#">API</a></li>
+      <a href="#">Jobs</a></li>
+      <a href="#">privacy</a></li>
+      <a href="#">Terms</a></li>
+      <span>&copy; 2014 Instagram</span>
+    </footer>
+  </div>
 </body>
 </html>
