No pude acomodar las imágenes una a lado de otra

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,51 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="/starter-code/css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="top-left">
+    <a class = "heart" href=""><img src="/starter-code/images/home.png" alt="home"></a>
+    <span class="acronym">Log in</span>
+  </div>
 
-  Capture and Share the World's Moments
+  <div>
+    <section></section>
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <img src="/starter-code/images/phones.png" alt="">
+  <img src="/starter-code/images/brand.png" alt="Instagram">
+  
+<section>
+  <h2>Capture and Share the World's Moments</h1>
+
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
   Oh yeah, did we mention it's free?
+</p>
+  <img src="/starter-code/images/badge-iphone.png" alt="Download on the App Store">
+  <img src="/starter-code/images/badge-android.png" alt="Get it on Google Play">
+  
+</section>
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <footer class="nav-bar">
+    <ul class='nav-bar-ul'>
+      <li><a class='nav-bar-item' href='#structure'>About Us</a></li>
+      <li><a class='nav-bar-item' href='#team'>Support</a></li>
+      <li><a class='nav-bar-item' href='#schedule'>Blog</a></li>
+      <li><a class='nav-bar-item' href='#schedule'>Press</a></li>
+      <li><a class='nav-bar-item' href='#schedule'>API</a></li>
+      <li><a class='nav-bar-item' href='#schedule'>Jobs</a></li>
+      <li><a class='nav-bar-item' href='#schedule'>Privacy</a></li>
+      <li><a class='nav-bar-item' href='#schedule'>Terms</a></li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
+  
 
-  &copy; 2014 Instagram
+  
 </body>
 </html>
