--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,19 +4,26 @@
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <section>
+    <h1>Instagram</h1>
+  </section>
+<section>
+  <h3>Capture and Share the World's Moments</h3>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
+<p>  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+</p>
+<p>
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
+</p>
+<p>
   Oh yeah, did we mention it's free?
-
+</p>
+</section>
+<section>  
   Download on the App Store
   Get it on Google Play
-
+</section>
+<section>
   About Us
   Support
   Blog
@@ -25,7 +32,7 @@
   Jobs
   Privacy
   Terms
-
   &copy; 2014 Instagram
+  </section>
 </body>
 </html>
