--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+  <section id="main">
+    <div id="left-image">
+      <img src="images/phones.png">
+    </div>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <div id="right-content">
+      <div id="brand-container">
+        <img src="images/brand.png">
+        <button id="login-button">
+          <img src="images/home.png">
+          Login
+        </button>
+      </div>
+      <div id="presentation">
+        <h1>Capture and Share the World's Moments</h1>
+        <p> Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to
+          share your life with friends and family.</p>
+        <p> Take a picture or video, choose a filter to transform
+          its look and feel, then post to Instagram &mdash; it's
+          that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p> Oh yeah, did we mention it's free?</p>
+        <div id="download-apps">
+          <a href="#"><img src="images/badge-iphone.png"></a>
+          <a href="#"><img src="images/badge-android.png"></a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <nav id="bottom-navbar">
+      <ul>
+        <li class="nav-link"> <a href="#">About Us</a> </li>
+        <li class="nav-link"> <a href="#">Support</a> </li>
+        <li class="nav-link"> <a href="#">Blog</a> </li>
+        <li class="nav-link"> <a href="#">Press</a> </li>
+        <li class="nav-link"> <a href="#">API</a> </li>
+        <li class="nav-link"> <a href="#">Jobs</a> </li>
+        <li class="nav-link"> <a href="#">Privacy</a> </li>
+        <li class="nav-link"> <a href="#">Terms</a> </li>
+      </ul>
+    </nav>
+    <div id="copyright">
+      &copy; 2014 Instagram
+    </div>
+  </footer>
 </body>
+
 </html>
