--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -10,45 +10,58 @@
 
   <main>
     <section id="index">
+
       <aside class="Phone">
         <div class="imgPhone">
           <img src="./images/phones.png" alt="phone">
         </div>
       </aside>
+
       <section class="content">
         <section class="logo">
           <div class="imgBrand">
             <img src="./images/brand.png" alt="brand">
           </div>
-          <button>
-            <div class="buttonImg">
+
+          <a href="#">
+            <button>
               <div class="imgHome">
-                <img src="./images/home.png" alt="home"> log in
+                <img src="./images/home.png" alt="home">
               </div>
-            </div>
-          </button>
+                log in
+            </button>
+          </a>
         </section>
 
-        <article>
-          <h1>Capture and Share the World's Moments</h1>
-          <p>
-            Instagram is a fast, beautiful and fun way to share your life with friends and family.
-          </p>
-          <p>
-            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
-            that
-            easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-          </p>
-          <p>
-            Oh yeah, did we mention it's free?
-          </p>
+        <article class="frame" >
+          <div class="text">
+            <p>
+              <h1>Capture and Share
+                <br>
+                the World's Moments</h1>
+            </p>
+            <p>
+              Instagram is a fast, beautiful and fun way to share your life with friends and family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+              it's
+              that
+              easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            </p>
+            <p>
+              Oh yeah, did we mention it's free?
+            </p>
+          </div>
         </article>
+
         <article class="app">
           <div class="imgIphone">
             <a href="#" target="_blank">
               <img src="./images/badge-iphone.png" alt="badge-iphone">
             </a>
           </div>
+
           <div class="imgAnd">
             <a href="#" target="_blank">
               <img src="./images/badge-android.png" alt="badge-android">
@@ -57,6 +70,8 @@
         </article>
       </section>
     </section>
+
+
     <footer>
 
       <a href="#"> About Us</a>
