--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,9 +4,9 @@
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <img src="images/brand.png" alt="Instagram" />
 
-  Capture and Share the World's Moments
+  <h1></h1>Capture and Share the World's Moments</h1>
 
   Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
